@@ -4,6 +4,7 @@ import org.irods.jargon.core.connection.IRODSCommandsReconnectionTest;
 import org.irods.jargon.core.pub.ParallelTransferOperationsTest;
 import org.irods.jargon.core.pub.io.FileListingAndRecursiveGetReplicateTestingWithBigCollectionTest;
 import org.irods.jargon.core.unittest.functionaltest.IRODSCommandsFunctionalTest;
+import org.irods.jargon.core.unittest.functionaltest.IRODSTenThousandCollectionsTest;
 import org.irods.jargon.core.unittest.functionaltest.IRODSThousandCollectionsTest;
 import org.irods.jargon.core.unittest.functionaltest.IRODSThousandFilesTest;
 import org.junit.runner.RunWith;
@@ -14,7 +15,7 @@ import org.junit.runners.Suite;
 		IRODSThousandCollectionsTest.class,
 		FileListingAndRecursiveGetReplicateTestingWithBigCollectionTest.class,
 		ParallelTransferOperationsTest.class,
-		IRODSCommandsReconnectionTest.class, IRODSCommandsFunctionalTest.class})
+		IRODSCommandsReconnectionTest.class, IRODSCommandsFunctionalTest.class, IRODSTenThousandCollectionsTest.class})
 public class AllTestIncludingLongRunningAndFunctionalTests {
 
 }
